feat(neo): update SpongeNeo for 26.1.0.1-beta
Update all SpongeNeo mixins to target correct 26.1 bytecode:

- RegistryDataLoaderMixin_Neo: full rewrite using RegistryLoadTaskAccessor
  with @Slice to skip NeoForge's gametest block
- ReloadableServerResourcesMixin_Neo: fix lambda index ($3→$2), add 7th
  constructor param (newComponents)
- MinecraftServerMixin_Neo: fix lambda indices ($30/$31→$1/$4)
- TagLoaderMixin_NeoForge: fix lambda index ($6→$1)
- AbstractFurnaceBlockEntityMixin_Neo: port vanilla's RecipeContext pattern,
  update burn/canBurn/assemble signatures for 26.1
- AbstractFurnaceBlockEntityAccessor_Neo: update canBurn invoker signature

Common mixin changes:
- Move ChatType registration from RegistryDataLoaderMixin (fragile lambda
  target) to new RegistryLoadTaskMixin targeting freezeRegistry at HEAD
- Move broadcastAll weather redirect from ServerLevelMixin to vanilla-only
  ServerLevelMixin_Vanilla (NeoForge already broadcasts per-dimension)

Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>